@@ -13,9 +13,6 @@
 #This properties file lists the versions of the various artifacts used by hadoop and components.
 #It drives ivy and the generation of a maven POM
 
-# This is the version of hadoop we are generating
-hadoop.version=0.20.0
-
 #These are the versions of our dependencies (in alphabetical order)
 apacheant.version=1.7.0
 
